fix- rendering on mobile view trial 1

--- a/style.css
+++ b/style.css
@@ -454,10 +454,10 @@
     }
   }
 
-  @media (max-width: 310px) {
+  /* @media (max-width: 310px) {
     .chevron {
       display: none;
     }
 
 
-  }
+  } */
